[package]
name = "sp-xml"
description = "A library for IBM Safer Payments® XML messages serialization/deserialization"
version = "0.1.4"
authors = ["Tim Gabets <tim@gabets.ru>"]
edition = "2018"
readme = "README.md"
categories = ["development-tools"]
license = "GPL-3.0"
keywords = ["payments", "processing", "xml"]
repository = "https://github.com/timgabets/sp-xml"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
rand = "0.7"
serde = { version = "1.0", features = ["derive"] }
xml-rs = "0.8.0"
yaserde = "0.3.16"
yaserde_derive = "0.3.16"